// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlreadySubscribed message rendering works for multiple configurations and authors in a channel 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Good news: an upgraded GitHub app has been installed in this workspace. Type the following slash commands to keep GitHub working in this channel.",
    },
    Object {
      "color": "#24292f",
      "fields": Array [
        Object {
          "value": "\`/github subscribe kubernetes/kubernetes\`",
        },
        Object {
          "value": "\`/github subscribe facebook/react\`",
        },
      ],
      "mrkdwn_in": Array [
        "fields",
      ],
      "pretext": "Configurations created by <@U12345>:",
    },
    Object {
      "color": "#24292f",
      "fields": Array [
        Object {
          "value": "\`/github subscribe django/django\`",
        },
        Object {
          "value": "\`/github subscribe microsoft/typescript\`",
        },
      ],
      "mrkdwn_in": Array [
        "fields",
      ],
      "pretext": "Configurations created by <@U54321>:",
    },
    Object {
      "color": "#24292f",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "_Need help? Type \`/github help\` or <https://github.com/github-slack/private-beta|learn more>._",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`AlreadySubscribed message rendering works for one configuration in a channel 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Good news: an upgraded GitHub app has been installed in this workspace. Type the following slash command to keep GitHub working in this channel.",
    },
    Object {
      "color": "#24292f",
      "fields": Array [
        Object {
          "value": "\`/github subscribe atom/atom\`",
        },
      ],
      "mrkdwn_in": Array [
        "fields",
      ],
      "pretext": "Configuration created by <@U12345>:",
    },
    Object {
      "color": "#24292f",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "_Need help? Type \`/github help\` or <https://github.com/github-slack/private-beta|learn more>._",
    },
  ],
  "response_type": "in_channel",
}
`;
